[package]
name = "nats-vs-http-bench"
version = "0.1.0"
authors = ["Alexander Zaitsev <aliaaksandr.zaitsau@solarwinds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
nats = "0.8.6"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }

[dev-dependencies]
criterion = "0.3.3"
nats = "0.8.6"
reqwest = { version = "0.10.10", features = ["blocking"] }

[[bench]]
name = "nats"
harness = false

[profile.release]
lto = true
